// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EnhancedTableHead renders table head snapshot 1`] = `
<div>
  <table>
    <thead
      class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1t6vsw9-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Email
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1o9hn7v-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Count
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`EnhancedTableHead renders with all items selected snapshot 1`] = `
<div>
  <table>
    <thead
      class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1t6vsw9-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Email
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1o9hn7v-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Count
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`EnhancedTableHead renders with select all callback snapshot 1`] = `
<div>
  <table>
    <thead
      class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1t6vsw9-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium css-j0ceml-MuiTableCell-root"
          scope="col"
        >
          <span
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1poq2nf-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
          >
            <input
              aria-label="select all emails"
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              data-indeterminate="false"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1fm565k-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Email
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1o9hn7v-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Count
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`EnhancedTableHead renders with some selected items snapshot 1`] = `
<div>
  <table>
    <thead
      class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head css-1t6vsw9-MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-xncyw9-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Email
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium css-1o9hn7v-MuiTableCell-root"
          scope="col"
          vertical-align="center"
        >
          Count
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
